--- a/home.css
+++ b/home.css
@@ -3,8 +3,26 @@
       margin: 0;
       padding: 0;
     }
-    
-    
+
+/* Chrome version 29 and above */
+@media screen and (-webkit-min-device-pixel-ratio:0)
+and (min-resolution:.001dpcm) {
+selector{ property:value; }
+}
+
+/* Chrome version 22-28 */
+@media screen and(-webkit-min-device-pixel-ratio:0) {
+selector { -chrome-:only (;
+property:value;
+);}
+}
+
+/* Chrome, Safari, and also the Edge Browser and Firefox */
+@media and (-webkit-min-device-pixel-ratio:0) {
+selector { property:value; }
+}
+
+
     html {
       background-color: #131720;
       -webkit-background-size: cover;
