--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 _::-webkit-full-page-media, _:future, :root .safari_only {
-  max-width: 10px;}
+  backgrounnd-color: pink;}
 
 * {
       box-sizing: border-box;
