--- a/home.css
+++ b/home.css
@@ -1,15 +1,54 @@
-_::-webkit-full-page-media, _:future, :root .safari_only {
-  backgrounnd-color: pink;}
+/* adapt safari */
+  .browser-safari body{ 
+    background-size: auto;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+  
 
-* {
+  .browser-safari .pitchcontainer{
+    width: 100%;
+    font-size: 45px;
+    padding-top: 10px;
+   }
+      
+  .browser-safari .pitchcontainer span {
+    width: 100%;
+    padding: 0px 20% 10px 20%;
+  }
+      
+  .browser-safari .pitchcontainer img {
+    display: none;
+  }
+      
+  .browser-safari .contact {
+    width: 100%;
+    padding: 10px 20% 40px 20%;
+  }
+  
+  .browser-safari .players {
+    width:70% !important;
+    float:none;
+    height: 0;
+    padding:0px 0px 39.37% 0px;
+    margin: 50px auto;
+    position: relative;
+  }
+      
+  .browser-safari .players iframe {
+    border-width: 0.2vw;
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    overflow:hidden;
+  }
+   
+    * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
-    }
-
-
-
-
+    } 
+    
     html {
       background-color: #131720;
       -webkit-background-size: cover;
@@ -99,7 +138,7 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
     }
 
     .pitchcontainer {
-      font-size: 2.9vw;
+      font-size: 2.8vw;
       color: #ffb347;
       width: 50%;
       text-align: justify;
@@ -146,6 +185,10 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
       color: #f8f8ff;
     }
     
+    .phone {
+        padding: 0;
+    }
+    
     
 
     .row:after {
@@ -168,8 +211,9 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
       border-width: 0.1vw;
       border-style: solid;
       border-color: #ffe6c2;
-      background-color: grey;
     }
+
+
 
 
     @media screen and (max-width: 1010px) {
@@ -263,5 +307,116 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
         font-weight: 500;
         color: white;
       }
+      
+      .pitchcontainer span {
+        width: 100%;
+        padding: 0px 15% 20px 15%;
+      }
+      
+      .contact {
+       width: 100%;
+       padding: 15px 20% 30px 20%;
+      }
+      
+      a.four {
+      color: white;}
+      
+      
+/* adapt for phones/safari */
+      
+      
+      .browser-safari body{ 
+        background-size: 1266px 1379px;
+        background-repeat: repeat-y;
+      }
+
+      .browser-safari ul {
+        font-size: 35px;
+        font-weight: 400;
+        height: 100px;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+      }
+    
+      .browser-safari li a {
+        padding-top: 30px;
+        padding-left: 17px;
+        padding-right: 17px;
+        font-weight: 400;
+      }
+
+      .browser-safari .active {
+        height: 100px;
+      }
+
+      .browser-safari li a:hover:not(.active) {
+        background-color: #111;
+        height: 100px;
+      }
+
+      .browser-safari .popout {
+        height: 100px;
+        width: 100px;
+        float: right;
+      }
+
+      .browser-safari a.socials {
+        padding-bottom: 20px;
+        float: right;
+      }
+      
+      .browser-safari .pitchcontainer{
+        width: 100%;
+        font-size: 75px;
+        font-weight: 500;
+        color: white;
+        padding-top: 10px;
+        padding-right: 0px;
+        padding-left: 0px;
+     }
+     
+     .browser-safari .pitchcontainer span {
+        width: 100%;
+        padding: 0px 15% 20px 15%;
+     }
+     
+     .browser-safari .contact {
+       width: 100%;
+       padding: 15px 15% 20px 15%;
+      }
+   
+     .browser-safari a.four {
+        color: white;
+     }
+     
+     .browser-safari .phone {
+         padding:0;
+     }
+      
+     
+     .broswer-safari .phone {
+        padding:0;
+     }
+  
+  
+    .browser-safari .players {
+    width:80% !important;
+    float:none;
+    height: 0;
+    padding:0px 0px 45% 0px;
+    margin: 50px auto;
+    position: relative;
+  }
+      
+  .browser-safari .players iframe {
+    border-width: 0.2vw;
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    overflow:hidden;
+    border-width: 0.3vw;
+  }
       
     }
